--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,13 +30,25 @@ jimmer:
   dialect: org.babyfish.jimmer.sql.dialect.MySqlDialect
   show-sql: true
   database-validation-mode: ERROR
-# 配置swagger文档的访问路径，访问地址：http://127.0.0.1:8080/swagger-ui.html
+# springdoc-openapi项目配置,访问地址：http://127.0.0.1:8080/swagger-ui.html
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
-CloudDrive:
-  jwt:
-    header: Authorization
-    expire: 604800 # 7天，s为单位
-    secret: abcdefghabcdefghabcdefghabcdefgh
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan:
+        - io.github.mellivorines.clouddriveweb.dao.input
+        - io.github.mellivorines.clouddriveweb.dao.entity
+        - io.github.mellivorines.clouddriveweb.controller
+# knife4j的增强配置，不需要增强可以不配,访问地址：http://127.0.0.1:8080/doc.html
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+    swagger-model-name: "实体类"
 
