--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,4 +51,8 @@ knife4j:
   setting:
     language: zh_cn
     swagger-model-name: "实体类"
+#项目相关自定义配置
+CloudDrive:
+    file:
+      path: D://CloudDrive
 
