用户相关逻辑实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,16 +32,18 @@ knife4j.setting.swagger-model-name= "\u5B9E\u4F53\u7C7B"
 # \u5206\u4EAB
 cloud.drive.web.share-prefix=https://your-domain/share/
 
-# \u7F13\u5B58
-#cloud.drive.web.cache.type=com.rubin.cloud.drive.web.cache.local.LocalCache
+# \u7F13\u5B58\uFF1A\u652F\u6301\u672C\u5730\u548Credis
+#\u672C\u5730\u7F13\u5B58
+cloud.drive.web.cache.type=io.github.mellivorines.cloud.drive.web.cache.local.LocalCache
+#redis\u7F13\u5B58
+#cloud.drive.web.cache.type=io.github.mellivorines.cloud.drive.web.cache.redis.RedisCache
+#cloud.drive.web.cache.redis.database=0
+#cloud.drive.web.cache.redis.host=124.220.152.5
+#cloud.drive.web.cache.redis.port=6379
+#cloud.drive.web.cache.redis.password=777888love@#
 
-cloud.drive.web.cache.type=io.github.mellivorines.cloud.drive.web.cache.redis.RedisCache
-cloud.drive.web.cache.redis.database=0
-cloud.drive.web.cache.redis.host=124.220.152.5
-cloud.drive.web.cache.redis.port=6379
-cloud.drive.web.cache.redis.password=777888love@#
-
-# \u5B58\u50A8
+# \u5B58\u50A8\uFF1A\u652F\u6301\u672C\u5730\uFF0Cfds,SSO
+#\u672C\u5730\u5B58\u50A8
 cloud.drive.web.storage.processor.type=io.github.mellivorines.cloud.drive.web.storage.local.LocalStorageProcessor
 cloud.drive.web.storage.local.root-file-path=/data/pan
 cloud.drive.web.storage.local.temp-path=/data/pan/temp
